fullSandbox11072023/force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk</label>
    <nameField>
        <displayFormat>RISK{00000000}</displayFormat>
        <label>Risk #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>