fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Current_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Current_Risk_Indicator__c</fullName>
    <formula>IF( Current_Risk_Level__c =&quot;Low&quot;,IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Green&apos;),
IF( Current_Risk_Level__c =&quot;Medium&quot;,IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Amber&apos;),
IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;Red&apos;)))</formula>
    <label>Current Risk</label>
    <type>Text</type>
</CustomField>