fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Current_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Risk_Level__c</fullName>
    <label>Current Risk Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>