fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Date_of_Last_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Risk_Assessment__c</fullName>
    <label>Date of Last Risk Assessment</label>
    <type>Date</type>
</CustomField>