fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Impact_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Risk__c</fullName>
    <description>5 - Inability to deliver, business case/objective not viable
4 - Substantial delay, key deliverable not met, incur costs
3 - Delay, increased cost in excess of tolerance
2 - Small delay, small increased cost, but absorbable
1 - Insignificant changes, re-planning may be required</description>
    <inlineHelpText>5 - Inability to deliver
4 - Substantial delay, key deliverable not met, incur costs
3 - Delay, increased cost in excess of tolerance
2 - Small delay, small increased cost, but absorbable
1 - Insignificant changes, re-planning may be required</inlineHelpText>
    <label>Impact of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>