fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Likelihood_of_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Occurrence__c</fullName>
    <description>5 - Certain, Already Observed
4 - More likely to occur than not
3 - 50/50/ chance of occurring
2 - Less likely to occur
1 - Very unlikely to occur</description>
    <inlineHelpText>5 - Certain, Already Observed
4 - More likely to occur than not
3 - 50/50/ chance of occurring
2 - Less likely to occur
1 - Very unlikely to occur</inlineHelpText>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>