fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Movement__c.field-meta.xml
<CustomField>
    <fullName>Movement__c</fullName>
    <label>Movement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>