fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Potential_Impact__c.field-meta.xml
<CustomField>
    <fullName>Potential_Impact__c</fullName>
    <label>Potential Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>