fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Project_Priority__c.field-meta.xml
<CustomField>
    <fullName>Project_Priority__c</fullName>
    <formula>Initiative__r.Priority__c</formula>
    <label>Project Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>