fullSandbox11072023/force-app/main/default/objects/Risk__c/fields/Risk_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Risk_Strategy__c</fullName>
    <label>Risk Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Eliminate</fullName>
            </value>
            <value>
                <fullName>Mitigate</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>