fullSandbox11072023/force-app/main/default/objects/Risk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Project_Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Initial_Risk_Level__c</columns>
    <columns>Current_Risk_Level__c</columns>
    <columns>Current_Risk_Indicator__c</columns>
    <columns>Movement__c</columns>
    <columns>Risk_Description__c</columns>
    <columns>Risk_Strategy__c</columns>
    <columns>Owner__c</columns>
    <columns>Date_of_Last_Risk_Assessment__c</columns>
    <columns>Likelihood_of_Occurrence__c</columns>
    <columns>Impact_of_Risk__c</columns>
    <columns>Risk_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>